--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-<title Mr.lockhart<titile>
+<title> Mr.lockhart</title>
 
 
 </head>
 
 <body>
 
-<h1 style="text-alighn; ccemter;"mr. lockhart's websites</h1>
+<h1 style="text-align; center;">mr. lockhart's websites</h1>
 
 </body>
 
