html code fixed

--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html>
 
 <head>
-<title> Mr.lockhart</title>
-
+<title> Adrian's webpage</title>
 
 </head>
 
-<body>
 
-<h1 style="text-align; center;">mr. lockhart's websites</h1>
+<body style="background-color:blue";>
+<h1 style="text-align: center;">Adrians websites</h1>
 
 </body>
 
