--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 
-<body style="background-color:blue";>
+<body style="background-color:pink";>
 <h1 style="text-align: center;">Adrians websites</h1>
 
 </body>
