--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 <body style="background-color:pink";>
 <h1 style="text-align: center;">Adrians websites</h1>
+<p>[first paragraph]</p>
+<p>[</p>
+<p><a href="files/scratchmaze.sb2"  downloadd>Scratch Maze App</a></p>
 
 </body>
 
