--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body style="background-color:pink";>
 <h1 style="text-align: center;">Adrians websites</h1>
-<p>[first paragraph]</p>
+<p>[If you ae looking at this wepage you are awesome]</p>
 <p>[</p>
 <p><a href="files/scratchmaze.sb2"  downloadd>Scratch Maze App</a></p>
 
