--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 <body style="background-color:pink";>
-<h1 style="text-align: center;">Adrians websites</h1>
+<h1 style="text-align: center;">Adrians webpage</h1>
 <p>[If you are looking at this wepage you are awesome]</p>
 <p>[</p>
 <p><a href="files/scratchmaze.sb2"  download>Scratch Maze App</a></p>
