html code fixed

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <h1 style="text-align: center;">Adrians webpage</h1>
 <p>[If you are looking at this wepage you are awesome]</p>
 <p>[</p>
-<p><a href="files/scratchmaze.sb2"  download>Scratch Maze App</a></p>
-
+    <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/120655395/?autostart=false" frameborder="0" allowfullscreen></iframe>
+    
 </body>
 
 
