--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body style="background-color:pink";>
 <h1 style="text-align: center;">Adrians webpage</h1>
-<p>[If you are looking at this wepage you are awesome]</p>
+<p>[If you are looking at this wepage you are amazing]</p>
 <p>[</p>
     <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/120655395/?autostart=false" frameborder="0" allowfullscreen></iframe>
     
